--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -14,9 +14,14 @@
     "@acme/ui": "workspace:*",
     "@acme/utils": "workspace:*",
     "@vercel/examples-ui": "^1.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^1.1.1",
+    "lucide-react": "^0.311.0",
     "next": "canary",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
