--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,8 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@acme/ui": "workspace:*",
-    "@acme/utils": "workspace:*",
+    "@ghopay/ui": "workspace:*",
+    "@ghopay/utils": "workspace:*",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/examples-ui": "^1.0.4",
     "class-variance-authority": "^0.7.0",
