--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,6 +40,8 @@
     "react-dom": "^17.0.0 || ^18.0.0-0"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@swc/helpers": "^0.4.12",
     "clsx": "^1.1.1"
   },
