--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,7 +43,10 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@swc/helpers": "^0.4.12",
-    "clsx": "^1.1.1"
+    "@tanstack/react-query": "^5.17.15",
+    "clsx": "^1.1.1",
+    "viem": "2.x",
+    "wagmi": "^2.2.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.10",
