--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -42,9 +42,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@swc/helpers": "^0.4.12",
     "@tanstack/react-query": "^5.17.15",
-    "clsx": "^1.1.1",
+    "@wagmi/core": "^2.2.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.311.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
     "wagmi": "^2.2.1"
   },
