--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -15,8 +15,6 @@
     "@ghopay/utils": "workspace:*",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.15",
-    "@vercel/examples-ui": "^1.0.4",
-    "@wagmi/core": "^2.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.1.1",
     "lucide-react": "^0.311.0",
@@ -24,9 +22,8 @@
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "viem": "2.x",
-    "wagmi": "^2.2.1"
+    "tailwindcss": "^3.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
@@ -35,7 +32,6 @@
     "eslint": "^8.11.0",
     "eslint-config-next": "canary",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
 }
