--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,14 +19,15 @@
     "@wagmi/core": "^2.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.1.1",
+    "connectkit": "^1.6.0",
     "lucide-react": "^0.311.0",
     "next": "canary",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "2.x",
-    "wagmi": "^2.2.1"
+    "viem": "~1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
