--- a/turbo.json
+++ b/turbo.json
@@ -5,8 +5,8 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"],
       "env": [
-        "NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID",
-        "NEXT_PUBLIC_INFURA_API_KEY"
+        "WALLET_CONNECT_PROJECT_ID",
+        "INFURA_ID"
       ]
     },
     "test": {
