--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
-    "jsx": "preserve"
+    "jsx": "react-jsx"
   },
   "include": ["src", "@/web3ui"]
 }
