--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,7 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ghopay/ui": "workspace:*",
+    "ghopay-sdk": "workspace:*",
     "@ghopay/utils": "workspace:*",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.15",
