--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "@ghopay/ui",
-  "version": "0.0.1",
-  "repository": "https://github.com/vercel/examples.git",
+  "name": "ghopay-sdk",
+  "version": "0.1.0",
+  "repository": "https://github.com/Nazeeh21/GhoPay",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "lint": "TIMING=1 eslint \"**/*.{ts,tsx,js,jsx}\" --fix",
     "clean": "rm -rf .turbo",
     "build": "webpack --config webpack.config.cjs --mode production",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "sideEffects": false,
   "type": "module",
