add `/my-nfts` page

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,22 +11,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ghopay-sdk": "workspace:*",
+    "@bgd-labs/aave-address-book": "^2.17.0",
     "@ghopay/utils": "workspace:*",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.15",
     "@vercel/examples-ui": "^1.0.4",
     "@wagmi/core": "^2.2.1",
+    "alchemy-sdk": "^3.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.1.1",
     "connectkit": "^1.6.0",
+    "ghopay-sdk": "workspace:*",
     "lucide-react": "^0.311.0",
     "next": "canary",
     "react": "latest",
     "react-dom": "latest",
-    "@bgd-labs/aave-address-book": "^2.17.0",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
