--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,8 @@
       "outputs": [".next/**", "!.next/cache/**", "dist/**"],
       "env": [
         "WALLET_CONNECT_PROJECT_ID",
-        "INFURA_ID"
+        "INFURA_ID",
+        "ALCHEMY_API_KEY"
       ]
     },
     "test": {
