--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghopay-sdk",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "repository": "https://github.com/Nazeeh21/GhoPay",
   "license": "MIT",
   "scripts": {
@@ -55,8 +55,8 @@
     "lucide-react": "^0.311.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "2.x",
-    "wagmi": "^2.2.1"
+    "viem": "~1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
